--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <div class="mt-xl header">
     <div class="container">
+	    <p style="font-size:8px;">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
         <div class="row justify-content-center">
             <div class="col-auto">
                 <a href="{{ .Site.BaseURL }}">
