about update, dedication section, header update, log update, etc

--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -4,8 +4,10 @@
         <div class="row justify-content-center">
             <div class="col-auto">
                 <a href="{{ .Site.BaseURL }}">
-                    <h1 class="name">{{ .Site.Params.sitename }}</h1>
-                </a>
+			<h1 class="name">{{ .Site.Params.sitename }}</h1></a>
+		    <p><em>a social invention project ... to make better times</em></p>
+		    <p style="font-size:9px"><em>Peace is an improvement process, continuous and evolving; peace is not a result.</em></p>
+
             </div>
         </div>
 
