IN section populated

--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -5,7 +5,7 @@
             <div class="col-auto">
                 <a href="{{ .Site.BaseURL }}">
 			<h1 class="name">{{ .Site.Params.sitename }}</h1></a>
-		    <p><em>a social invention project ... to make better times</em></p>
+		    <p><em>a social invention project ... let's make better times</em></p>
 		    <p style="font-size:9px"><em>Peace is an improvement process, continuous and evolving; peace is not a result.</em></p>
 
             </div>
@@ -22,6 +22,11 @@
                 </li>
                 {{ end }}
             </ul>
+
         </div>
+	<p style="font-size:12px"><b><span style="color:gold">This is an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
+	    <p>.</p>
+	    <p>.</p>
+	    <p>.</p>
     </div>
 </div>
