update to 0617 logs

--- a/themes/hugo-tanka/layouts/index.html
+++ b/themes/hugo-tanka/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{ partial "header" . }}
-
+<p>Blair, for the next image of this site, you should break the sections into themes that the different people who visit your booth express and interest in, like mental health, economics, war, etc. Maybe you could create a parallel version of the tmfp that is more accessible along these lines...? -Blair</p>
 <div class="content">
     <div class="container">
         <div class="row justify-content-center">
