homepage update, prep for kickstarter release

--- a/themes/hugo-tanka/layouts/index.html
+++ b/themes/hugo-tanka/layouts/index.html
@@ -1,7 +1,11 @@
 {{ define "main" }}
 {{ partial "header" . }}
-<p>Blair, for the next image of this site, you should break the sections into themes that the different people who visit your booth express and interest in, like mental health, economics, war, etc. Maybe you could create a parallel version of the tmfp that is more accessible along these lines...? -Blair</p>
-
+<p>07/29/2021 - This website will be archived and replaced by something more functional in the near future. For now, this serves as a universal peace transparency for sharing the evolution of my process in preparing to launch the Time Machine For Peace: A Social Invention Project Kickstarter campaign.</p>
+<p>NOTE REGARDING THE UNIVERSAL PEACE PLAN:</p>
+<p>timemachineforpeace.wp.computer will be a primary subdomain within The Universal Peace Plan, which will for now be a collection of subdomains within the wp.computer (world piece computer) and up.computer (universal peace computer) domain space. For practical purposes, The Universal Peace Plan will be accessible via theuniversalpeaceplan.wp.computer and theuniversalpeaceplan.up.computer, which will serve as a subspace to index the subdomains relating to the Time Machine For Peace, and the plan for turning it into a sustainable social invention project.</p>
+<p>Some examples: blairmunroakusa.wp.computer and blairmunroakusa.up.computer is a subspace hosting the image of my personal world piece computer. growth.wp.computer and growth.up.computer will be a subspace for outlining the growth strategy and plan within The Universal Peace Plan. The apex subdomains apx.wp.computer and apx.up.computer will form a subspace devoted to general attributes underlying world piece computers and The Universal Peace Computer.</p>
+<p> <a href="https://blairmunroakusa.wp.computer/">blairmunroakusa.wp.computer</a> is a cross-transparency.</p>
+<p>For specific focus on context regarding the Kickstarter, view the 'Kickstarter' tab first.</p>
 
 
 <div class="content">
