--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div class="mt-xl header">
     <div class="container">
-	    <p style="font-size:8px;">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
+	    <p style="font-size:6px;">UNIVERSAL PEACE TRANSPARENCY - COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental. SAFETY: These ideas can be very stimulating. Please do not let exploring these ideas come at the cost of complete destabilization in your world. Complete destabilization is dangerous and can easily turn destructive, which in general runs contrary to the mission to accelerate the advent of world peace.  If you need to take a break, take a break. If you ever feel like you are losing stability, at risk for complete destabilization, please consider seeking out professional help immediately.</p>
         <div class="row justify-content-center">
             <div class="col-auto">
                 <a href="{{ .Site.BaseURL }}">
@@ -24,7 +24,7 @@
             </ul>
 
         </div>
-	<p style="font-size:12px"><b><span style="color:gold">This is an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
+	<p style="font-size:12px"><b><span style="color:gold">This is like an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
 	    <p>.</p>
 	    <p>.</p>
 	    <p>.</p>
