--- a/themes/hugo-tanka/layouts/index.html
+++ b/themes/hugo-tanka/layouts/index.html
@@ -1,5 +1,9 @@
 {{ define "main" }}
 {{ partial "header" . }}
+<p>11/04/2021 - The contents of this website were created under distress, for at the time I was undergoing an acute psychotic episode, product of a condition called 'schizoaffective disorder, bipolar type'. I have since stabilized, but I have chosen to leave this website up as a personal reminder to self. I still believe in the general idea I was attempting to convey, and all ideas associated with this communication attempt (eg, the kickstarter), but overall, my ability to do so in an accessible and relatable manner was impaired. I am currently in the process of creating a more accessible version of this website and the ideas contained within. For now however, it stands as-is. --Blair</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
 <p>07/29/2021 - This website will be archived and replaced by something more functional in the near future. For now, this serves as a universal peace transparency for sharing the evolution of my process in preparing to launch the Time Machine For Peace: A Social Invention Project Kickstarter campaign.</p>
 <p>NOTE REGARDING THE UNIVERSAL PEACE PLAN:</p>
 <p>timemachineforpeace.wp.computer will be a primary subdomain within The Universal Peace Plan, which will for now be a collection of subdomains within the wp.computer (world piece computer) and up.computer (universal peace computer) domain space. For practical purposes, The Universal Peace Plan will be accessible via theuniversalpeaceplan.wp.computer and theuniversalpeaceplan.up.computer, which will serve as a subspace to index the subdomains relating to the Time Machine For Peace, and the plan for turning it into a sustainable social invention project.</p>
