add Hi! cardboard and make spelling adjustment edits

--- a/themes/hugo-tanka/layouts/index.html
+++ b/themes/hugo-tanka/layouts/index.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
 {{ partial "header" . }}
-<h5>This website is currently under total(ish) resonstruction.</h5> 
+<h5>This website is currently under total(ish) reconstruction. Well, since this is <a href="https://blairmunroakusa.wp.computer">blairmunroakusa</a>'s aspect of the <a href="https://timemachineforpeace.up.computer">timemachineforpeace</a>, the site might stay as is. In the meantime, front and center is the old (but updated for spelling) pair of signage pieces from the original saturday market research booth (TIME MACHINE FOR PEACE).</h5> 
 <h5>To view original website,</h5>
-<h5><a href="https://summer2021.timemachineforpeace.wp.computer">please enter by clicking HERE <em>(AT YOUR OWN RISK)</em></a>.</h5>.
+<h5><a href="https://summer2021.timemachineforpeace.blairmunroakusa.wp.computer">please enter by clicking HERE <em>(AT YOUR OWN RISK)</em></a>.</h5>.
 
+<img src="/images/Hi!updated.png">
 
 <div class="content">
 
